--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Extra checks for SCI/ATC</td></tr>
 <li>Describe DVCS
 <li>Git workflow
 <li>Branching
-<li>push, pull, clone, commit
+<li>push, pull, clone, commit, fork, PR
 </section>
 </div>
 </div>
