--- a/index.html
+++ b/index.html
@@ -245,19 +245,27 @@ Git protocol: "Server and client MUST use lowercase for obj-id, both MUST treat 
 <h3>Features</h3>
 <li>.abapgit file
 <li>online/offline
+<li>starting folder
+<li>language "support"
+<li>folders vs packages
+<li>explore page
+<li>todo
 </section>
 
 <section>
 <h3>Use cases</h3>
 <li>share code via the "cloud"
 <li>share internally
+<li>todo
 </section>
 
 <section>
 <h3>What if</h3>
 <li>The Ethan Setup
 <li>Extra visibility(abapGitServer)
+<li>"package manager"
 <li>abaplint
+<li>abapmerge
 </section>
 
 <section>Slide 13</section>
@@ -340,6 +348,10 @@ Extra checks for SCI/ATC</td></tr>
 <section>
 <li>all checks configurable
 <li>something for almost everyone
+</section>
+<section>
+<h3>How to contribute</h3>
+todo
 </section>
 <section>
 <h3>Hendrik?</h3>
