--- a/index.html
+++ b/index.html
@@ -346,8 +346,11 @@ Extra checks for SCI/ATC</td></tr>
 </section>
 </section>
 <section>
+<li>dive into: 06 + 07 + 08 + 11 + 30 + 43
+<li>checks created from real world examples
 <li>all checks configurable
 <li>something for almost everyone
+<li>upDOWNci
 </section>
 <section>
 <h3>How to contribute</h3>
