--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@ Git protocol: "Server and client MUST use lowercase for obj-id, both MUST treat 
 
 <section>
 <h3>Features: Online/Offline</h3>
-todo, something
+<img src="offline.png" class="plain">
 </section>
 
 <section>
 <h3>Features: Folder support</h3>
-todo, packages vs folders
+<img src="package.png" class="plain">
 </section>
 
 <section>
@@ -445,7 +445,7 @@ Extra checks for SCI/ATC</td></tr>
 <br>
 <img src="06_conf.png" class="plain">
 <br>
-<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_06">Check documentation</a>
+<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_06">link</a>
 </section>
 
 <section>
@@ -456,7 +456,7 @@ Extra checks for SCI/ATC</td></tr>
 COMPUTE foo = 2 + 5.
 </code></pre>
 
-<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_08">Check documentation</a>
+<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_08">link</a>
 </section>
 
 <section>
@@ -467,7 +467,7 @@ COMPUTE foo = 2 + 5.
     value = 'FOOBAR'.</code></pre>
 <pre><code class="language-abap">lo_columns->set_count_column( EXPORTING value = 'FOOBAR' ).</code></pre>
 
-<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_07">Check documentation</a>
+<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_07">link</a>
 </section>
 
 <section>
@@ -476,7 +476,7 @@ COMPUTE foo = 2 + 5.
 <pre><code class="language-abap">lo_columns->set_count_column( EXPORTING value = 'FOOBAR' ).</code></pre>
 <pre><code class="language-abap">lo_columns->set_count_column( value = 'FOOBAR' ).</code></pre>
 
-<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_30">Check documentation</a>
+<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_30">link</a>
 </section>
 
 <section>
@@ -485,7 +485,12 @@ COMPUTE foo = 2 + 5.
 <pre><code class="language-abap">lo_columns->set_count_column( value = 'FOOBAR' ).</code></pre>
 <pre><code class="language-abap">lo_columns->set_count_column( 'FOOBAR' ).</code></pre>
 
-<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_43">Check documentation</a>
+<a href="https://github.com/larshp/abapOpenChecks/wiki/ZCL_AOC_CHECK_43">link</a>
+</section>
+
+<section>
+	<h3>Labs Preview: abaplint</h3>
+	<img src="abaplint.png" class="plain">
 </section>
 
 <section>
