add version req

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ Git client for ABAP</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-git-commit"></i></td><td>455 commits</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-organization"></i></td><td>7 contributors</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-code"></i></td><td>~24000 lines</td></tr>
+<tr><td><i class="mega-octicon more-mega octicon-versions"></i></td><td>7.02 and up</td></tr>
 </table>
 				</section>
 				<section>
@@ -356,6 +357,7 @@ Extra checks for SCI/ATC</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-git-commit"></i></td><td>428 commits</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-organization"></i></td><td>1 contributor</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-code"></i></td><td>~21000 lines</td></tr>
+<tr><td><i class="mega-octicon more-mega octicon-versions"></i></td><td>7.02 and up</td></tr>
 </table>
 </section>
 <section>
