last few updates

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <tr><td colspan="2"><img src="logo.svg" class="plain" width="200px"><br>
 Git client for ABAP</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-calendar"></i></td><td>started 2 years ago</td></tr>
-<tr><td><i class="mega-octicon more-mega octicon-git-commit"></i></td><td>455 commits</td></tr>
+<tr><td><i class="mega-octicon more-mega octicon-git-commit"></i></td><td>489 commits</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-organization"></i></td><td>7 contributors</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-code"></i></td><td>~24000 lines</td></tr>
 <tr><td><i class="mega-octicon more-mega octicon-versions"></i></td><td>7.02 and up</td></tr>
@@ -425,6 +425,7 @@ Extra checks for SCI/ATC</td></tr>
 <li class="small">CHECK_47 - RFC call error handling
 <li class="small">CHECK_48 - Table DEFAULT KEY
 <li class="small">CHECK_49 - Double space
+<li class="small">CHECK_50 - ASSERT and unit test ASSERT
 </td></tr></table>
 </section>
 </section>
