--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="slides">
 				<section>
 					<img src="logo.svg" class="plain"><br>
-					<b>& abapOpenChecks</b>
+					<b>&amp; abapOpenChecks</b>
 				</section>
 				<section>
 					<table>
